--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.panoprogramowanie.boilingfrogs">
 
     <application android:allowBackup="true"
+        android:name=".BoilingFrogs"
         android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher"
         android:supportsRtl="true"
