--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 
 # Using these variables to sync dependency version numbers across sub-projects.
 android_support_lib_version = 23.1.1
+butterknife_version = 7.0.1
