--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,4 @@
 # Using these variables to sync dependency version numbers across sub-projects.
 android_support_lib_version = 23.1.1
 butterknife_version = 7.0.1
+gson_version=2.1.5
