--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
             android:screenOrientation="portrait"
             android:theme="@style/BoilingFrogsTheme.NoActionBar"
             android:name=".ui.speaker.SpeakerActivity"/>
+        <activity
+            android:screenOrientation="portrait"
+            android:theme="@style/BoilingFrogsTheme.NoActionBar"
+            android:name=".ui.speech.SpeechActivity"/>
 
     </application>
 
