splash screen implemented

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,16 @@
         <activity
             android:screenOrientation="portrait"
             android:theme="@style/BoilingFrogsTheme.NoActionBar"
-            android:name=".ui.main.MainActivity">
+            android:name=".ui.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+            android:screenOrientation="portrait"
+            android:theme="@style/BoilingFrogsTheme.NoActionBar"
+            android:name=".ui.main.MainActivity"/>
         <activity
             android:screenOrientation="portrait"
             android:theme="@style/BoilingFrogsTheme.NoActionBar"
