recycler view 3 types of cards implemented

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,4 +4,5 @@ android_support_lib_version = 23.1.1
 butterknife_version = 7.0.1
 gson_version=2.1.5
 circle_imageview_version=2.0.0
+rounded_imageview_version=2.2.1
 universal_image_loader_version=1.9.4
