--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,11 +27,13 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile "com.android.support:appcompat-v7:${android_support_lib_version}"
+    compile "com.android.support:cardview-v7:${android_support_lib_version}"
     compile "com.android.support:design:${android_support_lib_version}"
     compile "com.android.support:support-v13:${android_support_lib_version}"
 
     compile "com.jakewharton:butterknife:${butterknife_version}"
     compile "com.nostra13.universalimageloader:universal-image-loader:${universal_image_loader_version}"
     compile "de.hdodenhof:circleimageview:${circle_imageview_version}"
+    compile "com.makeramen:roundedimageview:${rounded_imageview_version}"
     compile "org.immutables:gson:${gson_version}"
 }
