--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,5 @@
-buildscript {
-    repositories {
-        maven { url 'https://maven.fabric.io/public' }
-    }
-
-    dependencies {
-        classpath 'io.fabric.tools:gradle:1.+'
-    }
-}
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'io.fabric'
 
 repositories {
@@ -54,4 +46,10 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
+
+    // Dagger 2 and Compiler
+    compile "com.google.dagger:dagger:${dagger2_version}"
+    apt "com.google.dagger:dagger-compiler:${dagger2_version}"
+    compile "javax.annotation:jsr250-api:${javax_annotation_version}"
+
 }
