--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,5 @@ gson_version=2.1.5
 circle_imageview_version=2.0.0
 rounded_imageview_version=2.2.1
 universal_image_loader_version=1.9.4
+dagger2_version=2.0.2
+javax_annotation_version=1.0
