added greendao generator module with base model classes and speaker-speech relation

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,5 @@ rounded_imageview_version=2.2.1
 universal_image_loader_version=1.9.4
 dagger2_version=2.0.2
 javax_annotation_version=1.0
+greendao_version=2.2.0
+freemarker_version=2.3.24-incubating
