--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
 
     defaultConfig {
         applicationId "com.panoprogramowanie.boilingfrogs"
-        minSdkVersion 17
+        minSdkVersion 21
         targetSdkVersion 23
         versionCode 5
         versionName "1.1.3"
@@ -46,6 +46,8 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
+
+    compile "org.greenrobot:greendao:${greendao_version}"
 
     // Dagger 2 and Compiler
     compile "com.google.dagger:dagger:${dagger2_version}"
