--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ repositories {
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "com.panoprogramowanie.boilingfrogs"
@@ -51,7 +51,6 @@ dependencies {
 
     // Dagger 2 and Compiler
     compile "com.google.dagger:dagger:${dagger2_version}"
-    apt "com.google.dagger:dagger-compiler:${dagger2_version}"
-    compile "javax.annotation:jsr250-api:${javax_annotation_version}"
+    provided "com.google.dagger:dagger-compiler:${dagger2_version}"
 
 }
