--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,8 @@
+#toplevel build.gradle dependecies
+build_gradle_version=2.1.0
+apt_version=1.8
+retrolambda_version=3.2.5
+fabric_tools_version=1.+
 
 # Using these variables to sync dependency version numbers across sub-projects.
 android_support_lib_version = 23.2.1
