--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,10 @@ buildscript {
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        classpath 'io.fabric.tools:gradle:1.+'
+        classpath "com.android.tools.build:gradle:${build_gradle_version}"
+        classpath "com.neenbedankt.gradle.plugins:android-apt:${apt_version}"
+        classpath "me.tatarka:gradle-retrolambda:${retrolambda_version}"
+        classpath "io.fabric.tools:gradle:${fabric_tools_version}"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
