--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,10 @@ dependencies {
 
     compile "org.greenrobot:greendao:${greendao_version}"
 
+    compile "io.reactivex:rxjava:${rxjava_version}"
+    compile "io.reactivex:rxandroid:${rxandroid_version}"
+    compile "io.reactivex:rxandroid:${rxandroid_version}"
+
     // Dagger 2 and Compiler
     compile "com.google.dagger:dagger:${dagger2_version}"
     provided "com.google.dagger:dagger-compiler:${dagger2_version}"
