--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,6 @@ dagger2_version=2.2
 javax_annotation_version=1.0
 greendao_version=2.2.0
 freemarker_version=2.3.24-incubating
+rxjava_version=1.1.5
+rxandroid_version=1.2.0
+retrofit2_version=2.0.2
