--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,6 @@ freemarker_version=2.3.24-incubating
 rxjava_version=1.1.5
 rxandroid_version=1.2.0
 retrofit2_version=2.0.2
+retrofit2_adapter_rxjava_version=2.0.2
+retrofit2_converter_gson_version=2.0.2
+okhttp3_logging_innterceptor_version=3.2.0
