--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 #toplevel build.gradle dependecies
-build_gradle_version=2.2.3
+build_gradle_version=3.6.0
 apt_version=1.8
 retrolambda_version=3.2.5
-fabric_tools_version=1.+
+fabric_tools_version=1.28.1
 # Using these variables to sync dependency version numbers across sub-projects.
 android_support_lib_version=26.1.0
-butterknife_version=7.0.1
+butterknife_version=8.0.1
 gson_version=2.1.5
 circle_imageview_version=2.0.0
 rounded_imageview_version=2.2.1
