--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:${build_gradle_version}"
+        classpath "com.android.tools.build:gradle:$build_gradle_version"
         classpath "io.fabric.tools:gradle:${fabric_tools_version}"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
