--- a/greendao-generator/build.gradle
+++ b/greendao-generator/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'java'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "org.greenrobot:greendao-generator:${greendao_version}"
-    compile "org.freemarker:freemarker:${freemarker_version}"
+    implementation "org.greenrobot:greendao-generator:${greendao_version}"
+    implementation "org.freemarker:freemarker:${freemarker_version}"
 }
