--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 apply plugin: 'io.fabric'
 
 repositories {
@@ -7,7 +8,7 @@ repositories {
 
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion "29.0.3"
 
     defaultConfig {
@@ -34,12 +35,14 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
     testImplementation 'junit:junit:4.12'
 
-    implementation "com.android.support:appcompat-v7:${android_support_lib_version}"
-    implementation "com.android.support:cardview-v7:${android_support_lib_version}"
-    implementation "com.android.support:design:${android_support_lib_version}"
-    implementation "com.android.support:support-v13:${android_support_lib_version}"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "androidx.appcompat:appcompat:${android_appcompat_version}"
+    implementation "androidx.cardview:cardview:${android_cardview_version}"
+    implementation "com.google.android.material:material:${android_material_version}"
+    implementation "androidx.legacy:legacy-support-v13:${android_legacy_support_version}"
 
     implementation "com.jakewharton:butterknife:${butterknife_version}"
     annotationProcessor "com.jakewharton:butterknife-compiler:${butterknife_version}"
@@ -61,8 +64,8 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:${retrofit2_converter_gson_version}"
     implementation "com.squareup.okhttp3:logging-interceptor:${okhttp3_logging_innterceptor_version}"
 
-    // Dagger 2 and Compiler
-    implementation "com.google.dagger:dagger:${dagger2_version}"
-    annotationProcessor "com.google.dagger:dagger-compiler:${dagger2_version}"
 
+    implementation "io.insert-koin:koin-core:${koin_version}"
+    implementation "io.insert-koin:koin-android:${koin_version}"
+//    implementation "io.insert-koin:koin-android-viewmodel:${koin_version}"
 }
