--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,19 @@
 #toplevel build.gradle dependecies
 build_gradle_version=7.1.2
 fabric_tools_version=1.28.1
+kotlin_version=1.6.10
 # Using these variables to sync dependency version numbers across sub-projects.
 android_support_lib_version=28.0.0
 butterknife_version=8.0.1
 gson_version=2.1.5
+android_material_version=1.0.0-rc01
+android_cardview_version=1.0.0
+android_appcompat_version=1.4.1
+android_legacy_support_version=1.0.0
 circle_imageview_version=2.0.0
 rounded_imageview_version=2.2.1
 universal_image_loader_version=1.9.4
-dagger2_version=2.2
+koin_version=3.1.5
 javax_annotation_version=1.0
 greendao_version=2.2.0
 freemarker_version=2.3.24-incubating
@@ -18,3 +23,5 @@ retrofit2_version=2.3.0
 retrofit2_adapter_rxjava_version=2.3.0
 retrofit2_converter_gson_version=2.3.0
 okhttp3_logging_innterceptor_version=3.8.0
+android.useAndroidX=true
+android.enableJetifier=true
