--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.panoprogramowanie.boilingfrogs"
-        minSdkVersion 17
+        minSdkVersion 19
         targetSdkVersion 30
         versionCode 10
         versionName "1.4.1"
@@ -49,6 +49,7 @@ dependencies {
     implementation "org.immutables:gson:${gson_version}"
     implementation platform('com.google.firebase:firebase-bom:29.1.0')
     implementation 'com.google.firebase:firebase-crashlytics'
+    implementation 'com.google.firebase:firebase-analytics'
 
     implementation "org.greenrobot:greendao:${greendao_version}"
 
@@ -62,5 +63,4 @@ dependencies {
 
     implementation "io.insert-koin:koin-core:${koin_version}"
     implementation "io.insert-koin:koin-android:${koin_version}"
-//    implementation "io.insert-koin:koin-android-viewmodel:${koin_version}"
 }
