--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,10 +9,11 @@ android {
 
     defaultConfig {
         applicationId "com.panoprogramowanie.boilingfrogs"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 11
         versionName "1.5.1"
+        multiDexEnabled true
     }
     dataBinding {
         enabled = true
