app and sdk versions updated

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
             android:screenOrientation="portrait"
             android:theme="@style/BoilingFrogsTheme.NoActionBar"
             android:name=".ui.splash.SplashActivity"
+            android:exported="true"
             android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
